# census_ml_example

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  model_config.yaml
models/: lightgbm_best_model.txt  lightgbm_best_params.json  random_forest_best_params.json
notebooks/: 01_exploratory_data_analysis.ipynb  02_data_preprocessing.ipynb  03_modeling.ipynb
presentation/notes/: NEXT_STEPS.md
presentation/slides/: presentation.md
results/reports/: eda_report.md  feature_importance.csv  modeling_report.md  preprocessing_report.md
src/: __init__.py  data_exploration.py  data_loading.py  data_preprocessing.py  feature_engineering.py  main.py  modeling.py  utils.py  visualization.py
